- phodevi: Report kernel's build date when detected it's running on a daily/devel/RC kernel
- phodevi: Fix for Radeon GPU voltage reporting
- phodevi: Improved open-source GPU frequency detection when X Server not active
- phoromatic: Various fixes
- phoromatic: Add support for specifying custom client update script via account settings page to keep clients PTS updated

Phoronix Test Suite 5.8 Milestone 3
12 May 2015

- pts-core: Separate out WebSocket server back-ends
- phoromatic: Honor show_local_tests_only option via the build suite page
- phoromatic: Fix jumping on page on checkbox selection when scrolling
- phoromatic: Don't print network connectivity messages
- phoromatic: Set Phoromatic System Variables set by server on Phoromatic clients as env vars
- phoromatic: Lots of early Web Sockets work
- phoromatic: Initial support for the Mongoose Embedded Web Server, used by default if php-cgi and mongoose binaries are found in PATH
- phoromatic: Support for tick thread
- phoromatic: Support for reporting system sensors and client log to systems page
- phoromatic: Add support for real-time halt testing and rebooting from the Phoromatic Web UI

Phoronix Test Suite 5.8 Milestone 2
21 April 2015

- pts-core: Fix potential crash in list-installed-suites sub-command
- pts-core: Enforce CCACHE_DISABLE=1 during install/runtime testing
- pts-core: Finish removal of hhvm-server support since it's long been discontinued upstream
- pts-core: Add pts-core/hooks/startup
- phodevi: Reporting of Btrfs RAID levels to system component table when running disk tests
- phoromatic: Workaround for instr() usage in SQLite that caused issues with older distributions
- phoromatic: Add LetPublicViewResults option and new public results listing page
- phoromatic: Update results selection on rootadmin data page
- phoromatic: Start work on nginx server configuration (not yet working)
- phoromatic: Add "System Targets" info to benchmark ticket page & "View All Past Tickets"
